plugins {
	id "fabric-loom" version "1.8.12"
	id "babric-loom-extension" version "1.8.9"
	id "maven-publish"
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

loom {
	mixin {
		useLegacyMixinAp = true
	}
	customMinecraftManifest.set("https://babric.github.io/manifest-polyfill/${minecraft_version}.json")
	intermediaryUrl.set("https://maven.glass-launcher.net/babric/babric/intermediary/%1\$s/intermediary-%1\$s-v2.jar")
}

repositories {
	maven {
		name = "Babric"
		url = "https://maven.glass-launcher.net/babric"
	}
	maven {
		name = "Glass Releases"
		url = "https://maven.glass-launcher.net/releases"
	}
	maven {
		name = "Glass Snapshots"
		url = "https://maven.glass-launcher.net/snapshots"
	}
	maven {
		name = "Froge"
		url "https://maven.minecraftforge.net/"
	}
	maven {
		name = "Jitpack"
		url = "https://jitpack.io"
	}
	exclusiveContent {
		forRepository {
			maven {
				name = "Modrinth"
				url = "https://api.modrinth.com/maven"
			}
		}
		filter {
			includeGroup "maven.modrinth"
		}
	}
	mavenCentral()
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "com.github.paulevsGitch:BIN-Mappings-BH:${project.mappings}"
	modImplementation "babric:fabric-loader:${project.loader_version}"

	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.17.2"
	implementation "blue.endless:jankson:1.2.1"

	modImplementation ("net.modificationstation:StationAPI:${project.stapi_version}") {
		exclude group: "com.github.llamalad7.mixinextras"
	}
	
	modImplementation("com.github.paulevsGitch:BHCreative:${project.bhcreative_version}") {
		transitive false
	}
	
	modImplementation("com.github.paulevsGitch:VanillaBlockEnhancements:${project.vbe_version}") {
		transitive false
	}

	modImplementation("com.github.matthewperiut:retrocommands:${project.retrocommands_version}") {
		transitive false
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_BNB"}
	}
	from("TEXTURES_LICENSE") {
		rename { "${it}_BNB"}
	}
	from("MUSIC_LICENSE") {
		rename { "${it}_BNB"}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}
	repositories {}
}